Revert "Reduce PMD violations (no suppressions) (#641)" (#645)